--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https: //fonts.googleapis.com/css2?family= Raleway:wght@400;700 & family = Roboto:wght@400;500;700;900 & display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
     <header class="head">
         <section>
-                <a href="./index.html"class="logo">Web<span class="logo-word2">Studio</span></a>
+                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
             <nav>
                 <ul>
                     <li><a class="pages" href="./index.html">Студия</a></li>
@@ -36,19 +36,19 @@
             <h2 class="hide">Особености</h2>
             <ul>
                 <li class="details">
-                    <h3 class="peculiarities-title">Внимание к деталям</h3> 
+                    <h3 class="peculiarities-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3> 
                     <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-title">Пунктуальность</h3>
+                    <h3 class="peculiarities-title">ППУНКТУАЛЬНОСТЬ</h3>
                     <p class="peculiarities-text">Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-title">Планирование</h3>
+                    <h3 class="peculiarities-title">ПЛАНИРОВАНИЕ</h3>
                     <p class="peculiarities-text">Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-title">Современные технолоогии</h3>
+                    <h3 class="peculiarities-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="peculiarities-text">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
                 </li>
             </ul>
@@ -89,7 +89,7 @@
     </main>
     <footer>
         <section class="footer">
-        <a href="./index.html" class="logo">Web<span class="logo-word3">Studio</span></a>
+        <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
         <address class="address">
             <ul>
                 <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
