--- a/index.html
+++ b/index.html
@@ -8,33 +8,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
-    <header class="head">
-        <section>
+    <header class="container">        
+        <section> 
+            <div class="header-inner">              
                 <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
-            <nav>
-                <ul>
-                    <li><a class="pages" href="./index.html">Студия</a></li>
-                    <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="pages" href="#">Контакти</a></li>
-                </ul>    
-            </nav>                
-                <a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="info">+38(096)111-11-11</a>
-            </section>
+                <nav class="pages-body">
+                    <ul>
+                        <li><a class="pages" href="./index.html">Студия</a></li>
+                        <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
+                         <li><a class="pages" href="#">Контакти</a></li>
+                    </ul>    
+                </nav>        
+                    <ul class="info-body">
+                        <li><a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a></li>
+                        <li><a href="tel:+380961111111" class="info">+38(096)111-11-11</a></li>
+                    </ul>
+            </div>
+        </section>        
     </header>
     <main>
         <section>
             <span class="face">
-            <h1 class="title">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <h1 class="title-text">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="button" type="button">Заказать услугу</button>
         </span>
         </section>
-        <section class="peculiarities">
+        <section class="container">
             <h2 class="hide">Особености</h2>
-            <ul>
+            <ul >
                 <li class="details">
                     <h3 class="peculiarities-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3> 
                     <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -54,50 +59,57 @@
             </ul>
         </section>
         <section>
-        <h2 class="our-projects">Чем мы занимаемся</h2>
-        <ul>
-            <li class="desktop"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
-            <li class="phone"><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
-            <li class="colors"><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
-        </ul>
+            <div class="container">
+                <h2 class="our-projects">Чем мы занимаемся</h2>
+                <ul class="container">
+                    <li class="desktop"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
+                    <li class="phone"><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
+                    <li class="colors"><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
+                </ul>
         </section>
-            <section>
+        <section>
+            <div class="container">
                 <h2 class="our-team">Наша команда</h2>
                 <ul>
                     <li>
-                    <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="position">Product Designer</p>
+                        <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
+                        <h3 class="name">Игорь Демьяненко</h3>
+                        <p class="position">Product Designer</p>
                     </li>
                     <li>
-                    <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="position">Frontend Developer</p>
+                        <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
+                        <h3 class="name">Ольга Репина</h3>
+                        <p class="position">Frontend Developer</p>
                     </li>
                     <li>
-                    <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="position">Marketing</p>
+                        <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
+                        <h3 class="name">Николай Тарасов</h3>
+                        <p class="position">Marketing</p>
                     </li>
                     <li>
-                    <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="position">UI Designer</p>
+                        <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
+                        <h3 class="name">Михаил Ермаков</h3>
+                        <p class="position">UI Designer</p>
                     </li>   
                 </ul>
-            </section>
+            </div>
+        </section>
     </main>
     <footer>
-        <section class="footer">
-        <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
-        <address class="address">
-            <ul>
-                <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
-                <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
-                <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
-            </ul>
-        </address>
-        </section>
+        <section>
+            <div class="footer">
+            <div class="container">
+                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <address class="address">
+                    <ul>
+                        <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
+                        <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
+                        <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </div>
+        </section>        
     </footer>
 </body>
 </html>
