--- a/portfolio.html
+++ b/portfolio.html
@@ -8,99 +8,118 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
-    <header class="head">
-        <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
-        <nav>
-            <ul>
-                <li><a class="pages" href="./index.html">Студия</a></li>
-                <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="pages" href="#">Контакти</a></li>
-            </ul>    
-        </nav>                
-            <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="info" href="tel:+380961111111">+38(096)111-11-11</a>
+    <header class="head-body"> 
+        <div class="container">
+            <div class="header-inner">
+                <section>               
+                    <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
+                    <nav class="pages-body">
+                        <ul>
+                            <li><a class="pages" href="./index.html">Студия</a></li>
+                            <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
+                            <li><a class="pages" href="#">Контакти</a></li>
+                        </ul>    
+                    </nav>        
+                        <ul class="info-body">
+                            <li><a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a></li>
+                            <li><a href="tel:+380961111111" class="info">+38(096)111-11-11</a></li>
+                        </ul>
+                </section> 
+            </div>
+        </div>        
     </header>
     <main>
         <section>
-            <h1>Все проекты</h1>
-            <ul>
-            <li>
-                <button class="portfolio-button" type="button">Все</button>
-            </li>     
-            <li>
-                <button class="portfolio-button" type="button">Веб-сайты</button>
-            </li>
-            <li>
-                <button class="portfolio-button" type="button">Приложения</button>
-            </li>
-            <li>
-                <button class="portfolio-button" type="button">Дизайн</button>
-            </li>
-            <li>
-                <button class="portfolio-button" type="button">Маркетинг</button>
-            </li>
-            </ul> 
-            <ul>
-                <li>
-                    <img src="./images/web.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Технокряк</h3>
-                    <p class="project-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/poster.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                    <p class="project-text">Дизайн</p>
-                </li>
-                 <li>
-                    <img src="./images/logo.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Ресторан Seafood</h3>
-                    <p class="project-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/projectprime.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Проект Prime</h3>
-                    <p class="project-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Проект Boxes</h3>
-                    <p class="project-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/multinational.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Inspiration has no Borders</h3>
-                    <p class="project-text">Веб-сайт</p>
-                </li>
-                 <li>
-                    <img src="./images/limitededition.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Издание Limited Edition</h3>
-                    <p class="project-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/projectlab.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Проект LAB</h3>
-                    <p class="project-text">Маркетинг</p>
-                </li>
-                 <li>
-                    <img src="./images/busines.jpg" width="370" height="295" alt="">
-                    <h3 class="project-name">Growing Business</h3>
-                    <p class="project-text">Приложение</p>
-                </li>
-            </ul>
+            <div class="container">
+                <div class="projects">
+                    <h1><span class="hide">Все проекты</span></h1>
+                    <ul>
+                        <li>
+                            <button class="portfolio-button" type="button">Все</button>
+                        </li>     
+                        <li>
+                            <button class="portfolio-button" type="button">Веб-сайты</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-button" type="button">Приложения</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-button" type="button">Дизайн</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-button" type="button">Маркетинг</button>
+                        </li>
+                    </ul>
+                </div> 
+                <ul>
+                    <li>
+                        <img src="./images/web.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Технокряк</h3>
+                        <p class="project-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/poster.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                        <p class="project-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/logo.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Ресторан Seafood</h3>
+                        <p class="project-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectprime.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Проект Prime</h3>
+                        <p class="project-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Проект Boxes</h3>
+                        <p class="project-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/multinational.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Inspiration has no Borders</h3>
+                        <p class="project-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/limitededition.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Издание Limited Edition</h3>
+                        <p class="project-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/projectlab.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Проект LAB</h3>
+                        <p class="project-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/busines.jpg" width="370" height="295" alt="">
+                        <h3 class="project-name">Growing Business</h3>
+                        <p class="project-text">Приложение</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
-    <footer class="footer">
-        <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
-        <address class="address">
-                <ul>
-                    <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
-                    <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
-                    <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
-                </ul>
-        </address>
+    <footer>
+        <section>
+            <div class="footer">
+            <div class="container">
+                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <address class="address">
+                    <ul>
+                        <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
+                        <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
+                        <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </div>
+        </section>        
     </footer>
 </body>
 </html>
