--- a/index.html
+++ b/index.html
@@ -12,47 +12,45 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
-    <header class="container">        
-        <section> 
+    <header>
+        <div class="container">       
             <div class="header-inner">              
-                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
+                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
                 <nav class="pages-body">
                     <ul>
-                        <li><a class="pages" href="./index.html">Студия</a></li>
-                        <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
-                         <li><a class="pages" href="#">Контакти</a></li>
+                        <li class="pages"><a href="./index.html">Студия</a></li>
+                        <li class="pages"><a href="./portfolio.html">Портфолио</a></li>
+                        <li class="pages"><a href="#">Контакти</a></li>
                     </ul>    
-                </nav>        
+                </nav>       
                     <ul class="info-body">
-                        <li><a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a></li>
-                        <li><a href="tel:+380961111111" class="info">+38(096)111-11-11</a></li>
+                        <li class="info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="info"><a href="tel:+380961111111">+38(096)111-11-11</a></li>
                     </ul>
             </div>
-        </section>        
+        </div>          
     </header>
     <main>
-        <section>
-            <span class="face">
+        <section class="face">
             <h1 class="title-text">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="button" type="button">Заказать услугу</button>
-        </span>
         </section>
         <section class="container">
             <h2 class="hide">Особености</h2>
-            <ul >
-                <li class="details">
+            <ul class="peculiarities-boxes">
+                <li class="box-peculiarities">
                     <h3 class="peculiarities-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3> 
                     <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3 class="peculiarities-title">ППУНКТУАЛЬНОСТЬ</h3>
+                <li class="box-peculiarities">
+                    <h3 class="peculiarities-title">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="peculiarities-text">Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="box-peculiarities">
                     <h3 class="peculiarities-title">ПЛАНИРОВАНИЕ</h3>
                     <p class="peculiarities-text">Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
                 </li>
-                <li>
+                <li class="box-peculiarities">
                     <h3 class="peculiarities-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="peculiarities-text">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
                 </li>
@@ -60,38 +58,42 @@
         </section>
         <section>
             <div class="container">
+                <div class="services">
                 <h2 class="our-projects">Чем мы занимаемся</h2>
-                <ul class="container">
-                    <li class="desktop"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
-                    <li class="phone"><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
-                    <li class="colors"><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
+                <ul>
+                    <li class="services"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
+                    <li class="services"><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
+                    <li class="services"><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
+                </div>
                 </ul>
         </section>
         <section>
             <div class="container">
+                <div class="our-team-container">
                 <h2 class="our-team">Наша команда</h2>
-                <ul>
-                    <li>
+                <ul >
+                    <li class="employee">
                         <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="position">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="employee">
                         <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="position">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="employee">
                         <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="position">Marketing</p>
                     </li>
-                    <li>
+                    <li class="employee">
                         <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
                         <h3 class="name">Михаил Ермаков</h3>
                         <p class="position">UI Designer</p>
                     </li>   
                 </ul>
+                </div>
             </div>
         </section>
     </main>
@@ -99,7 +101,7 @@
         <section>
             <div class="footer">
             <div class="container">
-                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
                 <address class="address">
                     <ul>
                         <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
