--- a/portfolio.html
+++ b/portfolio.html
@@ -12,32 +12,30 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
-    <header class="head-body"> 
-        <div class="container">
-            <div class="header-inner">
-                <section>               
-                    <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
-                    <nav class="pages-body">
-                        <ul>
-                            <li><a class="pages" href="./index.html">Студия</a></li>
-                            <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
-                            <li><a class="pages" href="#">Контакти</a></li>
-                        </ul>    
-                    </nav>        
-                        <ul class="info-body">
-                            <li><a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a></li>
-                            <li><a href="tel:+380961111111" class="info">+38(096)111-11-11</a></li>
-                        </ul>
-                </section> 
+    <header>
+        <div class="container">       
+            <div class="header-inner">              
+                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
+                <nav class="pages-body">
+                    <ul>
+                        <li class="pages"><a href="./index.html">Студия</a></li>
+                        <li class="pages"><a href="./portfolio.html">Портфолио</a></li>
+                        <li class="pages"><a href="#">Контакти</a></li>
+                    </ul>    
+                </nav>       
+                    <ul class="info-body">
+                        <li class="info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="info"><a href="tel:+380961111111">+38(096)111-11-11</a></li>
+                    </ul>
             </div>
-        </div>        
+        </div>          
     </header>
     <main>
         <section>
+            <h1><span class="hide">Все проекты</span></h1>
             <div class="container">
-                <div class="projects">
-                    <h1><span class="hide">Все проекты</span></h1>
-                    <ul>
+                <div class="projects-button">                   
+                    <ul class="projects-button">
                         <li>
                             <button class="portfolio-button" type="button">Все</button>
                         </li>     
@@ -55,53 +53,61 @@
                         </li>
                     </ul>
                 </div> 
-                <ul>
-                    <li>
-                        <img src="./images/web.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Технокряк</h3>
-                        <p class="project-text">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/poster.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                        <p class="project-text">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/logo.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Ресторан Seafood</h3>
-                        <p class="project-text">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/projectprime.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Проект Prime</h3>
-                        <p class="project-text">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Проект Boxes</h3>
-                        <p class="project-text">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/multinational.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Inspiration has no Borders</h3>
-                        <p class="project-text">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/limitededition.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Издание Limited Edition</h3>
-                        <p class="project-text">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/projectlab.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Проект LAB</h3>
-                        <p class="project-text">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/busines.jpg" width="370" height="295" alt="">
-                        <h3 class="project-name">Growing Business</h3>
-                        <p class="project-text">Приложение</p>
-                    </li>
-                </ul>
+                <div class="portfolio-projects">
+                    <ul>
+                        <div class="box1">
+                            <li class="box">
+                                <img src="./images/web.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Технокряк</h3>
+                                <p class="project-text">Веб-сайт</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/poster.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                                <p class="project-text">Дизайн</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/logo.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Ресторан Seafood</h3>
+                                <p class="project-text">Приложение</p>
+                            </li>
+                        </div>
+                        <div class="box2">
+                            <li class="box">
+                                <img src="./images/projectprime.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Проект Prime</h3>
+                                <p class="project-text">Маркетинг</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Проект Boxes</h3>
+                                <p class="project-text">Приложение</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/multinational.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Inspiration has no Borders</h3>
+                                <p class="project-text">Веб-сайт</p>
+                            </li>
+                        </div>
+                        <div class="box3">
+                            <li class="box">
+                                <img src="./images/limitededition.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Издание Limited Edition</h3>
+                                <p class="project-text">Дизайн</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/projectlab.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Проект LAB</h3>
+                                <p class="project-text">Маркетинг</p>
+                            </li>
+                            <li class="box">
+                                <img src="./images/busines.jpg" width="370" height="295" alt="">
+                                <h3 class="project-name">Growing Business</h3>
+                                <p class="project-text">Приложение</p>
+                            </li>
+                        </div>    
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
@@ -109,7 +115,7 @@
         <section>
             <div class="footer">
             <div class="container">
-                <a href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
                 <address class="address">
                     <ul>
                         <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
